style.css
:root {
  font-family: monospace;
}

body {
  background-color: #323236;
  color: white;
  padding-top: 3rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

h1 {
  color: lightblue;
}

input {
  font-family: monospace;
  outline: none;
  text-align: center;
  margin-top: 1rem;
}

.results-heading {
  color: lightgreen;
  font-size: xx-large;
  padding-top: 2rem;
}

.parent {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
  column-gap: 40px;
}

.parent p {
  text-align: right;
}

.div1 {
  grid-area: 1 / 1 / 2 / 2;
}
.div2 {
  grid-area: 1 / 2 / 2 / 3;
}
.div3 {
  grid-area: 1 / 3 / 2 / 4;
  justify-self: start;
}

.results-note,
.results-hz,
.results-ms {
  color: lightcoral;
  font-size: x-large;
  line-height: 1.1em;
}

.parent span {
  color: white;
}

.hide {
  display: none;
}

